# dgate

./: .gitignore  ACKNOWLEDGEMENTS  COPYING  README.md  flake.nix  meson.build
LICENSES/: BSD-3-Clause.txt
src/common/: TQueue.h  c++sock.h  threaded_queue.h
src/dgate/: app.cxx  app.h  client.cxx  client.h  dgate.h  g2.h  main.cxx  packet.cxx
src/dlink/: app.cxx  app.h  app_xrf.cxx  dcs.h  main.cxx  xrf.h
src/dv/: aprs.cxx  aprs.h  crc.cxx  crc.h  dv.h  frame.cxx  frame.h  header.cxx  header.h  stream.cxx  stream.h  tables.h  types.h
src/ircddb/: IRCClient.cxx  IRCClient.h  IRCDDBApp.cxx  IRCDDBApp.h  IRCMessage.cxx  IRCMessage.h  app.cxx  app.h  client.cxx  client.h  irc_msg.cxx  irc_msg.h
src/itap/: app.cxx  app.h  itap.h  main.cxx
src/test/: crc_ccitt_table_calc.cxx  test_aprs_string.cxx  test_dgate_sock.cxx  test_echo.cxx  test_frame.cxx  test_header.cxx  test_stream_prepare.cxx  test_text.cxx
